Ensure page explorer header item aligns with toggle on sm device
- fixes #8939

--- a/client/src/components/PageExplorer/PageExplorer.scss
+++ b/client/src/components/PageExplorer/PageExplorer.scss
@@ -44,8 +44,8 @@ $explorer-header-horizontal-padding: 10px;
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
-  margin-inline-start: $sidebar-toggle-spacing * 2 + $sidebar-toggle-size;
-  height: $sidebar-toggle-spacing * 2 + $sidebar-toggle-size;
+  margin-inline-start: $mobile-nav-indent;
+  height: $mobile-nav-indent;
 
   @include media-breakpoint-up(sm) {
     margin-inline-start: initial;
